# wiregraph

./: .gitignore  LICENSE  README.md  RING1_EXTRACTION_PLAN.md  RING2_INTEGRATION_PLAN.md  RING3_INTEGRATION_PLAN.md  local.yml  pyproject.toml
.envs/: .env.example
config/: __init__.py  celery_app.py  settings.py  settings_no_drf.py  urls.py
config/settings/: base.py  local.py  production.py
core_apps/: constants.py
core_apps/common/: admin_views.py  apps.py  conf.py  middleware.py  tenancy.py  views.py
core_apps/common/management/commands/: wiregraph_doctor.py
core_apps/detection/: admin.py  allowlist.py  apps.py  middleware.py  models.py  receivers.py  regex_scanner.py  serializers.py  signals.py  urls.py  views.py
core_apps/egress/: apps.py  interceptor.py  models.py  signals.py
core_apps/reporting/: admin.py  apps.py  models.py  purge.py
core_apps/reporting/management/commands/: wiregraph_purge.py
core_apps/reporting/migrations/: 0001_initial.py
core_apps/reporting/templates/reporting/: ropa_template.html
core_apps/tenants/: admin.py  apps.py  models.py
core_apps/tenants/migrations/: 0001_initial.py
docker/django/: Dockerfile  entrypoint.sh  start.sh
docker/local/django/: Dockerfile
docs/: SETUP_GUIDE.md  settings.md
requirements/: base.txt  local.txt
scripts/: packaging_guard.sh
src/wiregraph/: __init__.py  _drf.py  api_urls.py  resolvers.py  setup.py
src/wiregraph_apps/: constants.py  sinks.py
src/wiregraph_apps/common/: admin_views.py  apps.py  conf.py  middleware.py  request_context.py  tenancy.py  views.py
src/wiregraph_apps/common/api/: __init__.py
src/wiregraph_apps/detection/: admin.py  allowlist.py  apps.py  cache_django.py  classifier.py  classifier_django.py  dedup.py  escalation.py  flow_state.py  middleware.py  models.py  persistence.py  pipeline.py  presidio_scanner.py  receivers.py  regex_scanner.py  selectors.py  serializers.py  signals.py  tasks.py  urls.py  views.py
src/wiregraph_apps/egress/: admin.py  apps.py  interceptor.py  models.py  signals.py
src/wiregraph_apps/reporting/: admin.py  digest.py  models.py  purge.py  urls.py  views.py
src/wiregraph_apps/tenants/: models.py
src/wiregraph_core/: __init__.py  allowlist.py  cache.py  classifier.py  config.py  dedup.py  escalation.py  pipeline.py  protocols.py  sinks.py  types.py
src/wiregraph_core/scanner/: presidio.py  regex.py
tests/: conftest.py  test_admin_dashboard.py  test_admin_site_override.py  test_alert_gate.py  test_allowlist.py  test_allowlist_persistence.py  test_auth.py  test_celery_integration.py  test_classifier.py  test_conf.py  test_dedup.py  test_detection_accuracy.py  test_doctor.py  test_egress_aiohttp.py  test_egress_httpx_async.py  test_egress_httpx_sync.py  test_egress_interceptor.py  test_egress_presidio.py  test_imports.py  test_init_scaffolder.py  test_installed_apps.py  test_middleware.py  test_middleware_e2e.py  test_presidio_scanner.py  test_presidio_task.py  test_purge.py  test_realistic_payloads.py  test_regex_scanner.py  test_resolvers.py  test_setup_helper.py  test_shadow_counter.py  test_shadow_mode.py  test_signals.py  test_sink_resolver.py  test_third_party_http.py  test_views.py
tests/fixtures/: factories.py  payloads.json  pii_samples.py  presidio_payloads.py
tests/test_core/: test_classifier.py  test_pipeline.py
tests/test_no_drf/: conftest.py  test_admin_dashboard.py  test_doctor.py  test_middleware.py  test_persistence.py
wiregraph/: __init__.py  apps.py  celery.py  resolvers.py  setup.py
wiregraph_apps/common/: admin_views.py  apps.py  auth_views.py  models.py
wiregraph_apps/detection/: admin.py  apps.py  middleware.py  models.py  regex_scanner.py  urls.py
wiregraph_apps/detection/migrations/: 0001_initial.py  0002_allowlistrule.py
wiregraph_apps/egress/: apps.py  interceptor.py  models.py
wiregraph_apps/egress/migrations/: 0001_initial.py
wiregraph_apps/reporting/: apps.py  models.py  purge.py
wiregraph_apps/reporting/migrations/: 0001_initial.py
wiregraph_apps/tenants/: apps.py
(+31 files in other folders)
