[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wiregraph"
version = "0.1.0"
description = "Runtime PII leak detector for Django — find personal data leaking from your API responses and third-party calls"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Giorgio Chin"},
]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Security",
]
dependencies = [
    "django>=5.0",
    "djangorestframework>=3.14",
    "djangorestframework-simplejwt>=5.3",
    "django-cors-headers>=4.3",
    "drf-spectacular>=0.27",
    "celery>=5.3",
    "redis>=5.0",
    "environs[django]>=11.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.1",
]
presidio = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
]
export = [
    "reportlab>=4.0",
    "xhtml2pdf>=0.2",
]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "factory-boy>=3.3",
    "coverage>=7.0",
    "responses>=0.25",
]
all = ["wiregraph[postgres,presidio,export,dev]"]

[project.urls]
Homepage = "https://github.com/wiregraph/wiregraph"
Documentation = "https://wiregraph.readthedocs.io"

[tool.hatch.build.targets.wheel]
packages = ["wiregraph", "core_apps", "config"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["test_*.py"]
